# rust-name-wish

./: Cargo.toml  LICENSE  README.md  build.sh  start.sh
src/: main.rs
static/: style.css  theme.js
templates/: error.html  home.html  index.html  pongal.html
